# perihelion

./: .gitignore  CLAUDE.md  CODE_REVIEW_DIRECTIONS.md  COMPATIBLE.md  Cargo.toml  Cross.toml  DEV-LOG.md  DEVLOG.md  Dockerfile.relay  PERFORMANCE_CHECK.md  README.md  ROUTEMAP.md  TODO.md  TUI-STYLE.md  UI-STYLE.md  build-arm.sh  dev.sh  progress.md  prompts.md
acpx-g/: download.sh  progress.md
human/: TESTING.md  TODO.md
langfuse-client/: Cargo.toml  Doc.md
langfuse-client/src/: batcher.rs  client.rs  config.rs  error.rs  lib.rs  types.rs
peri-agent/: Cargo.toml
peri-cli/: README.md  (+1 more)
perihelion-widgets/: Cargo.toml
perihelion-widgets/src/: bordered_panel.rs  checkbox_group.rs  form.rs  input_field.rs  lib.rs  list.rs  radio_group.rs  scrollable.rs  tab_bar.rs
perihelion-widgets/src/markdown/: highlight.rs  mod.rs  render_state.rs
perihelion-widgets/src/message_block/: blocks.rs  highlight.rs  mod.rs
perihelion-widgets/src/spinner/: animation.rs  mod.rs  verb.rs
perihelion-widgets/src/theme/: mod.rs  presets.rs
perihelion-widgets/src/tool_call/: collapse.rs  display.rs  mod.rs
rust-agent-middlewares/: Cargo.toml
rust-agent-middlewares/src/: agent_define.rs  agents_md.rs  claude_agent_parser.rs  lib.rs
rust-agent-middlewares/src/ask_user/: mod.rs
rust-agent-middlewares/src/cron/: middleware.rs  mod.rs  tools.rs
rust-agent-middlewares/src/hitl/: auto_classifier.rs  mod.rs  shared_mode.rs
rust-agent-middlewares/src/mcp/: auth_store.rs  callback_server.rs  client.rs  config.rs  mod.rs  oauth_flow.rs  tool_bridge.rs  transport.rs
rust-agent-middlewares/src/middleware/: filesystem.rs  mod.rs  prepend_system.rs  terminal.rs  todo.rs
rust-agent-middlewares/src/plugin/: installer.rs  loader.rs  types.rs
rust-agent-middlewares/src/skills/: loader.rs  mod.rs
rust-agent-middlewares/src/subagent/: fork.rs  fork_test.rs  mod.rs  skill_preload.rs  tool.rs  tool_test.rs
rust-agent-middlewares/src/tool_search/: tool_index.rs
rust-agent-middlewares/src/tools/: ask_user_tool.rs  mod.rs  todo.rs
rust-agent-middlewares/src/tools/filesystem/: edit.rs  folder.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
rust-agent-middlewares/tests/: middleware_tool_registration.rs
rust-agent-tui/: Cargo.toml
rust-agent-tui/prompts/: default.md  system.md
rust-agent-tui/prompts/sections/: 03_doing_tasks.md  04_actions.md  05_using_tools.md  06_tone_style.md  07_communicating.md  10_hitl.md  11_subagent.md  12_cron.md  13_skills.md
rust-agent-tui/src/: event.rs  lib.rs  main.rs  prompt.rs  relay_adapter.rs  ui.rs
rust-agent-tui/src/app/: agent.rs  agent_comm.rs  agent_compact.rs  agent_events_bg.rs  agent_ops.rs  agent_panel.rs  agent_submit.rs  ask_user_ops.rs  ask_user_prompt.rs  chat_session.rs  command_system.rs  config_panel.rs  core.rs  cron_ops.rs  cron_state.rs  events.rs  hint_ops.rs  history_ops.rs  hitl.rs  hitl_ops.rs  hitl_prompt.rs  hooks_panel.rs  interaction_broker.rs  langfuse_state.rs  login_panel.rs  mcp_panel.rs  memory_panel.rs  message_pipeline.rs  mod.rs  model_panel.rs  oauth_prompt.rs  panel_ops.rs  plugin_panel.rs  provider.rs  relay_ops.rs  relay_panel.rs  relay_state.rs  service_registry.rs  setup_wizard.rs  status_panel.rs  (+3 more)
rust-agent-tui/src/command/: agent.rs  agents.rs  clear.rs  compact.rs  config.rs  context_cmd.rs  cost.rs  cron.rs  help.rs  history.rs  login.rs  loop_cmd.rs  mcp.rs  memory.rs  mod.rs  model.rs  plugin_command.rs  relay.rs  split.rs
rust-agent-tui/src/config/: mod.rs  store.rs  types.rs
rust-agent-tui/src/langfuse/: config.rs  mod.rs  session.rs  tracer.rs
rust-agent-tui/src/thread/: browser.rs  mod.rs
rust-agent-tui/src/ui/: headless.rs  headless_test.rs  main_ui.rs  markdown.rs  message_render.rs  message_view.rs  mod.rs  render_thread.rs  theme.rs  tips.rs  welcome.rs
rust-agent-tui/src/ui/main_ui/: status_bar.rs  sticky_header.rs
rust-agent-tui/src/ui/main_ui/panels/: agent.rs  config.rs  cron.rs  login.rs  mcp.rs  memory.rs  mod.rs  model.rs  relay.rs  status.rs  thread_browser.rs
rust-agent-tui/src/ui/main_ui/popups/: ask_user.rs  hints.rs  hitl.rs  mod.rs  oauth.rs  setup_wizard.rs
rust-agent-tui/src/ui/markdown/: mod.rs  render_state.rs
rust-create-agent/: Cargo.toml  README.md
rust-create-agent/examples/: basic_agent.rs  custom_middleware.rs  tool_integration.rs
rust-create-agent/src/: error.rs  lib.rs
rust-create-agent/src/agent/: events.rs  executor.rs  mod.rs  react.rs  state.rs  token.rs
rust-create-agent/src/agent/compact/: config.rs  full.rs  invariant.rs  micro.rs  mod.rs  re_inject.rs
rust-create-agent/src/agent/executor/: mod.rs  mod_test.rs
rust-create-agent/src/ask_user/: mod.rs
rust-create-agent/src/hitl/: mod.rs
rust-create-agent/src/interaction/: mod.rs
rust-create-agent/src/llm/: adapter.rs  anthropic.rs  mod.rs  openai.rs  react_adapter.rs  retry.rs  types.rs
rust-create-agent/src/messages/: content.rs  message.rs  mod.rs
rust-create-agent/src/messages/adapters/: anthropic.rs  openai.rs
rust-create-agent/src/middleware/: base.rs  chain.rs  trait.rs
rust-create-agent/src/telemetry/: mod.rs  otel.rs  subscriber.rs
rust-create-agent/src/thread/: filesystem.rs  mod.rs  sqlite_store.rs  store.rs  types.rs
rust-create-agent/src/tools/: mod.rs  provider.rs
rust-create-agent/tests/: agent_tests.rs  integration_tests.rs  middleware_tests.rs
rust-relay-server/: Cargo.toml
rust-relay-server/src/: auth.rs  lib.rs  main.rs  protocol.rs  protocol_types.rs  relay.rs  static_files.rs
rust-relay-server/src/client/: mod.rs
rust-relay-server/web/: App.css  app.js  base.css  connection.js  events.js  index.html  state.js  style.css
rust-relay-server/web/components/: App.js  AskUserDialog.css  AskUserDialog.js  HitlDialog.css  HitlDialog.js  MessageList.css  MessageList.js  Pane.css  Pane.js  PaneContainer.css  PaneContainer.js  Sidebar.css  Sidebar.js  TodoPanel.css  TodoPanel.js
rust-relay-server/web/js/: connection.js  dialog.js  events.js  layout.js  main.js  render.js  state.js
rust-relay-server/web/utils/: hooks.js  html.js
(+387 files in other folders)
