[package]
name = "langfuse-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22", features = ["alloc"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
temp-env = "0.3"
mockito = "1"
