[package]
name = "rust-agent-tui"
version = "0.1.0"
edition = "2021"
description = "TUI interface for Rust Agent - interactive terminal playground"

[lib]
name = "rust_agent_tui"
path = "src/lib.rs"

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[features]
headless = []

[dev-dependencies]

[dependencies]
serde = { version = "1", features = ["derive"] }
rust-create-agent = { path = "../rust-create-agent" }
rust-agent-middlewares = { path = "../rust-agent-middlewares" }
ratatui = { version = ">=0.30", features = ["unstable-rendered-line-info"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
serde_json = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
dirs-next = "2"
ratatui-textarea = "0.8"
parking_lot = "0.12"
arboard = "3"
png = "0.18"
base64 = { version = "0.22", features = ["alloc"] }
langfuse-client = { path = "../langfuse-client" }
perihelion-widgets = { path = "../perihelion-widgets", features = ["markdown"] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
] }
