[package]
name = "rust-create-agent"
version = "0.1.0"
edition = "2021"
description = "Rust Agent framework with middleware system, aligned with @langgraph-js/standard-agent"
license = "MIT"

[features]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
# tracing（始终启用，零开销宏）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# OpenTelemetry（可选，启用 `otel` feature 后激活）
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-blocking-client", "reqwest-rustls"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
tokio-test = "0.4"
