[package]
name = "rust-create-agent"
version = "0.1.0"
edition = "2021"
description = "Rust Agent framework with middleware system, aligned with @langgraph-js/standard-agent"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.32"
tokio-util = { version = "0.7.18", features = ["rt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
